tests/baselines/reference/ExportVariableOfGenericTypeWithInaccessibleTypeAsTypeArgument.errors.txt
==== tests/cases/compiler/ExportVariableOfGenericTypeWithInaccessibleTypeAsTypeArgument.ts (2 errors) ====
    module A {
        class B {
            id: number;
        }
    
        export var beez: Array<B>;
                   ~~~~~~~~~~~~~~
!!! ExportVariableOfGenericTypeWithInaccessibleTypeAsTypeArgument.ts(6,16): error TS2027: Exported variable 'beez' has or is using private type 'B'.
        export var beez2 = new Array<B>();
                   ~~~~~~~~~~~~~~~~~~~~~~
!!! ExportVariableOfGenericTypeWithInaccessibleTypeAsTypeArgument.ts(7,16): error TS2027: Exported variable 'beez2' has or is using private type 'B'.
    }